--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-io = "1.13.0"
+chrono = "0.4.24"
 socket2 = "0.5.2"
+tokio = {version = "1.27.0", features = ["full"] }
