--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,9 @@ edition = "2021"
 [dependencies]
 async-io = "1.13.0"
 chrono = "0.4.24"
+crc = "3.0.1"
+rand = "0.8.5"
+rsa = "0.8.2"
+sha2 = "0.10.6"
 socket2 = "0.5.2"
 tokio = {version = "1.27.0", features = ["full"] }
