--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 async-io = "1.13.0"
 chrono = "0.4.24"
 crc = "3.0.1"
+dryoc = "0.5.0"
 rand = "0.8.5"
 rsa = "0.8.2"
 sha2 = "0.10.6"
