--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,6 @@ dryoc = "0.5.0"
 rand = "0.8.5"
 reqwest = { version = "0.11.16", features = ["blocking"] }
 rsa = "0.8.2"
+rsntp = "3.0.2"
 sha2 = "0.10.6"
 socket2 = "0.5.2"
