--- a/udp-test/Cargo.toml
+++ b/udp-test/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.24"
 connection = {path = "../connection"}
 rand = "0.8.5"
 socket2 = "0.5.2"
