--- a/udp-test/Cargo.toml
+++ b/udp-test/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.24"
 connection = {path = "../connection"}
+dryoc = "0.5.0"
 rand = "0.8.5"
 rsntp = "3.0.2"
 socket2 = "0.5.2"
