--- a/gui/package.json
+++ b/gui/package.json
@@ -11,6 +11,7 @@
     "@tauri-apps/api": "^1.2.0",
     "material-symbols": "^0.5.5",
     "next": "^13.0.0",
+    "node-sass-glob-importer": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.62.1"
