--- a/gui/package.json
+++ b/gui/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.2.0",
+    "filesize": "^10.0.7",
     "material-symbols": "^0.5.5",
     "next": "^13.0.0",
     "node-sass-glob-importer": "^5.3.2",
